@@ -3,7 +3,7 @@
 #   Build Service & Dependencies
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-FROM veupathdb/alpine-dev-base:jdk-18 AS prep
+FROM veupathdb/alpine-dev-base:jdk-18-gradle-7.6 AS prep
 
 LABEL service="eda-build"
 
@@ -12,38 +12,28 @@ ARG GITHUB_TOKEN
 
 WORKDIR /workspace
 
-RUN jlink --compress=2 --module-path /opt/jdk/jmods \
-       --add-modules java.base,java.net.http,java.security.jgss,java.logging,java.xml,java.desktop,java.management,jdk.management,java.sql,java.naming,jdk.crypto.ec \
-       --output /jlinked \
-    && apk add --no-cache git sed findutils coreutils make npm curl gawk jq \
-    && git config --global advice.detachedHead false
-
-RUN npm install -gs raml2html raml2html-modern-theme
-
-# download gradle
-COPY gradlew ./
-COPY gradle gradle
-RUN bash -c 'echo "\n\n" | ./gradlew init --type basic --dsl kotlin --no-daemon'
+RUN apk add --no-cache npm \
+  && npm install -gs raml2html raml2html-modern-theme
 
 # copy files required to build dev environment and fetch dependencies
 COPY build.gradle.kts settings.gradle.kts ./
 
 # download raml tools (these never change)
-RUN ./gradlew install-raml-4-jax-rs install-raml-merge
+RUN gradle install-raml-4-jax-rs install-raml-merge
 
 # download project dependencies in advance
-RUN ./gradlew download-dependencies
+RUN gradle download-dependencies
 
 # copy raml over for merging, then perform code and documentation generation
 COPY api.raml ./
 COPY schema schema
-RUN ./gradlew generate-jaxrs generate-raml-docs
+RUN gradle generate-jaxrs generate-raml-docs
 
 # copy remaining files
 COPY . .
 
 # build the project
-RUN ./gradlew clean test shadowJar
+RUN gradle clean test shadowJar
 
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -51,7 +41,7 @@ RUN ./gradlew clean test shadowJar
 #   Run the service
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-FROM alpine:3.16
+FROM amazoncorretto:17-alpine3.20
 
 LABEL service="eda-service"
 
@@ -64,10 +54,8 @@ ENV JAVA_HOME=/opt/jdk \
     JVM_MEM_ARGS="" \
     JVM_ARGS=""
 
-COPY --from=prep /jlinked /opt/jdk
-COPY --from=prep /usr/lib/jvm/default-jvm/lib/security/cacerts /opt/jdk/lib/security/cacerts
-COPY --from=prep /workspace/build/libs/service.jar /service.jar
-
 COPY startup.sh startup.sh
+
+COPY --from=prep /workspace/build/libs/service.jar /service.jar
 
 CMD ./startup.sh
